methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:8: error: not found: value n
      for(k<-1 to n){
                  ^